...
                android:textColor="@color/username5"
                android:text="@{ socketId }"
                android:textStyle="bold"
                tools:text="@string/tools_text_socket_id"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/prompt_username"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
...
                android:singleLine="true"
                android:importantForAutofill="no"
                android:padding="2dp"/>

            <!--  android:onClick="attemptLogin" -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/action_sign_in"
...
