...
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prompt_message"
                android:imeActionLabel="@string/action_send"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:importantForAutofill="no"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_send"
                android:contentDescription="@string/action_send"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
...
